[gd_scene load_steps=5 format=3 uid="uid://c03vl337ik20v"]

[ext_resource type="PackedScene" uid="uid://dg3ikms7niw6" path="res://Scenes/SettingsPage/collapsible_setting_base.tscn" id="1_0qm4j"]
[ext_resource type="Script" path="res://Scenes/SettingsPage/Scripts/pride_dice_themes_setting.gd" id="2_02aan"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="3_5bfqv"]
[ext_resource type="PackedScene" uid="uid://ds66lujjolvu" path="res://Scenes/SettingsPage/theme_list_item.tscn" id="4_s5sor"]

[node name="PrideDiceThemesSetting" instance=ExtResource("1_0qm4j")]
script = ExtResource("2_02aan")

[node name="CollapsibleContainer" parent="TopLevelContainer" index="1"]
visible = false

[node name="ThemeContainer" type="VBoxContainer" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection" index="0"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -382.5
offset_bottom = 382.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_5bfqv")
theme_override_constants/separation = 5
alignment = 1

[node name="AgenderTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="0" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 0

[node name="AromanticTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="1" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 1

[node name="AsexualTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="2" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 2

[node name="BisexualTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="3" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 4

[node name="CommunityLesbianTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="4" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 5

[node name="GenderfluidTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="5" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 12

[node name="GenderqueerTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="6" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 13

[node name="IntersexTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="7" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 15

[node name="LgbtTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="8" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 16

[node name="LipstickLesbianTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="9" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 17

[node name="NonBinaryTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="10" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 19

[node name="PansexualTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="11" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 20

[node name="PolysexualTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="12" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 21

[node name="TransgenderTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="13" instance=ExtResource("4_s5sor")]
layout_mode = 2
size_flags_vertical = 4
die_theme = 29
